@@ -4,7 +4,8 @@ Changelog
 1.25-dev - (unreleased)
 -----------------------
  * Bug fix: add eea.vocab profile to dependencies. Fixes tests [tiberich]
- * Bug fix: changed working for no datasets specified [tiberich #3831]
+ * Bug fix: changed wording for "no datasets specified" messages [tiberich #3831]
+ * Bug fix: preselect EEAFigure tab in relations popup [tiberich #3604]
 
 1.24 - (2010-11-12)
 -------------------
